--- a/config/sync/core.entity_form_display.paragraph.event_list.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.event_list.default.yml
@@ -12,22 +12,40 @@ dependencies:
     - paragraphs.paragraphs_type.event_list
   module:
     - entity_browser
+    - field_group
     - link
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_appearance:
+      children:
+        - field_background_image
+        - field_background_color
+      parent_name: ''
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Udseende
+      region: content
 id: paragraph.event_list.default
 targetEntityType: paragraph
 bundle: event_list
 mode: default
 content:
   field_background_color:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_background_image:
     type: entity_browser_file
-    weight: 3
+    weight: 4
     settings:
       entity_browser: image_browser
       field_widget_edit: true
