--- a/config/sync/language.content_settings.node.event.yml
+++ b/config/sync/language.content_settings.node.event.yml
@@ -8,9 +8,9 @@ dependencies:
     - content_translation
 third_party_settings:
   content_translation:
-    enabled: false
+    enabled: true
 id: node.event
 target_entity_type_id: node
 target_bundle: event
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
