--- a/config/sync/language.content_settings.user.user.yml
+++ b/config/sync/language.content_settings.user.user.yml
@@ -7,7 +7,7 @@ dependencies:
     - user
 third_party_settings:
   content_translation:
-    enabled: false
+    enabled: true
 id: user.user
 target_entity_type_id: user
 target_bundle: user
