--- a/config/sync/views.view.vih_search.yml
+++ b/config/sync/views.view.vih_search.yml
@@ -44,7 +44,7 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: full
         options:
           items_per_page: 10
           offset: 0
@@ -53,6 +53,8 @@ display:
           tags:
             previous: ‹‹
             next: ››
+            first: '« Første'
+            last: 'Sidste »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -61,6 +63,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+          quantity: 9
       style:
         type: default
       row:
@@ -338,7 +341,7 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Displaying @start - @end of @total'
+          content: 'Viser @start - @end af @total'
           plugin_id: result
       footer: {  }
       empty:
