--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -1,18 +1,21 @@
-uuid: 6c4de216-13d8-42a1-a6d2-0b29a6af2761
-langcode: en
+uuid: da6bf122-2742-48a2-b8d1-e7093bbcdd52
+langcode: da
 status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - field.field.paragraph.user_quote.field_author
     - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_heading
+    - field.field.paragraph.user_quote.field_link
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - paragraphs.paragraphs_type.user_quote
   module:
     - entity_browser
     - field_group
+    - link
     - text
     - workbench_moderation
 third_party_settings:
@@ -22,7 +25,7 @@ third_party_settings:
         - field_background_color
         - field_background_image
       parent_name: ''
-      weight: 3
+      weight: 5
       format_type: tab
       format_settings:
         id: ''
@@ -37,36 +40,23 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_background_color:
-    weight: 4
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
-  field_background_image:
-    type: entity_browser_file
-    weight: 5
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    third_party_settings: {  }
-    region: content
-  field_heading:
-    weight: 0
+  field_author:
+    weight: 1
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_paragraph_person_photo:
+  field_background_color:
+    type: options_select
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_background_image:
     type: entity_browser_file
-    weight: 2
+    weight: 6
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -75,16 +65,45 @@ content:
       preview_image_style: thumbnail
       open: true
       selection_mode: selection_append
-    third_party_settings: {  }
     region: content
+    third_party_settings: {  }
+  field_heading:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_link:
+    weight: 4
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
+  field_paragraph_person_photo:
+    type: entity_browser_file
+    weight: 3
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_paragraph_text:
-    weight: 1
+    type: text_textarea
+    weight: 2
+    region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: text_textarea
-    region: content
 hidden:
   created: true
   status: true
