--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -1,55 +1,70 @@
-uuid: c5e6d4aa-197f-4a6b-98a0-b3dedd0c26e9
-langcode: en
+uuid: 7aaa3299-d42c-4745-890e-b5ed7fac2fbe
+langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.user_quote.field_author
     - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_heading
+    - field.field.paragraph.user_quote.field_link
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.user_quote
   module:
     - image
+    - link
     - text
 id: paragraph.user_quote.default
 targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_background_image:
-    weight: 3
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
-  field_heading:
-    weight: 0
+  field_author:
+    weight: 4
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
+  field_heading:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_link:
+    weight: 3
+    label: hidden
+    settings:
+      trim_length: null
+      url_only: false
+      url_plain: false
+      rel: '0'
+      target: '0'
+    third_party_settings: {  }
+    type: link
+    region: content
   field_paragraph_person_photo:
+    type: image
     weight: 1
+    region: content
     label: hidden
     settings:
       image_style: vih_person_teaser
       image_link: ''
     third_party_settings: {  }
-    type: image
-    region: content
   field_paragraph_text:
+    type: text_default
     weight: 2
+    region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: text_default
-    region: content
 hidden:
   field_background_color: true
+  field_background_image: true
