Form confirm layout

--- a/config/sync/core.entity_form_display.paragraph.vih_ordered_course_person.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_ordered_course_person.default.yml
@@ -41,7 +41,7 @@ content:
     type: string_textfield
     region: content
   field_vih_ocp_ordered_options:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 9
     settings:
       title: Paragraph
@@ -50,6 +50,8 @@ content:
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: ''
+      closed_mode: summary
+      autocollapse: none
     third_party_settings: {  }
     region: content
 hidden:
