--- a/config/sync/core.entity_form_display.node.vih_short_course_order.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course_order.default.yml
@@ -22,7 +22,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 7
+    weight: 31
     settings:
       rows: 9
       summary_rows: 3
@@ -31,12 +31,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     region: content
   field_vih_sco_course:
-    weight: 9
+    weight: 33
     settings:
       match_operator: CONTAINS
       size: 60
@@ -46,7 +46,7 @@ content:
     region: content
   field_vih_sco_ordered_options:
     type: entity_reference_paragraphs
-    weight: 8
+    weight: 32
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -58,7 +58,7 @@ content:
     region: content
   field_vih_sco_persons:
     type: entity_reference_paragraphs
-    weight: 10
+    weight: 34
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -69,28 +69,28 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_sco_price:
-    weight: 11
+    weight: 35
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sco_status:
-    weight: 12
+    weight: 36
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 6
+    weight: 30
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -98,19 +98,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 15
+    third_party_settings: {  }
+    region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 121
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 16
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: 0
+    weight: -5
     settings:
       size: 60
       placeholder: ''
@@ -118,12 +125,11 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden:
-  status: true
+hidden: {  }
