--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
+    - field.field.node.event.field_metatag
     - field.field.node.event.field_paragraphs
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
@@ -23,6 +24,7 @@ dependencies:
     - entity_browser
     - field_group
     - inline_entity_form
+    - metatag
     - paragraphs
     - path
     - text
@@ -83,6 +85,7 @@ third_party_settings:
       region: content
     group_misc:
       children:
+        - field_metatag
         - langcode
         - uid
         - created
@@ -90,6 +93,7 @@ third_party_settings:
         - sticky
         - path
         - scheduled_update
+        - translation
       parent_name: ''
       weight: 3
       format_type: tab
@@ -117,7 +121,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -165,6 +169,12 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+    region: content
+  field_metatag:
+    weight: 12
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
     region: content
   field_paragraphs:
     weight: 11
@@ -220,14 +230,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 5
+    weight: 13
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 10
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -235,11 +245,11 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 16
     third_party_settings: {  }
     region: content
   scheduled_update:
-    weight: 12
+    weight: 19
     settings:
       match_operator: CONTAINS
       form_mode: default
@@ -255,7 +265,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 17
     third_party_settings: {  }
     region: content
   title:
@@ -267,11 +277,13 @@ content:
     third_party_settings: {  }
     region: content
   translation:
-    weight: 10
+    weight: 20
     region: content
+    settings: {  }
+    third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
