--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_banner
+    - field.field.node.vih_long_cource.field_metatag
     - field.field.node.vih_long_cource.field_paragraphs
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
@@ -23,6 +24,7 @@ dependencies:
     - entity_browser
     - field_group
     - inline_entity_form
+    - metatag
     - paragraphs
     - path
     - text
@@ -84,6 +86,7 @@ third_party_settings:
       region: content
     group_other:
       children:
+        - field_metatag
         - langcode
         - uid
         - created
@@ -119,7 +122,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 29
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -136,6 +139,12 @@ content:
       selection_mode: selection_append
     region: content
     third_party_settings: {  }
+  field_metatag:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
+    region: content
   field_paragraphs:
     weight: 7
     settings:
@@ -233,14 +242,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 4
+    weight: 27
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 10
+    weight: 33
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -248,11 +257,11 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 31
     third_party_settings: {  }
     region: content
   scheduled_update:
-    weight: 11
+    weight: 34
     settings:
       match_operator: CONTAINS
       form_mode: default
@@ -268,7 +277,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 32
     third_party_settings: {  }
     region: content
   title:
@@ -280,13 +289,13 @@ content:
     third_party_settings: {  }
     region: content
   translation:
-    weight: 7
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 28
     settings:
       match_operator: CONTAINS
       size: 60
