--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class_package.field_banner
     - field.field.taxonomy_term.vih_class_package.field_heading
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
+    - field.field.taxonomy_term.vih_class_package.field_metatag
     - field.field.taxonomy_term.vih_class_package.field_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_subheading
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
@@ -16,6 +17,7 @@ dependencies:
     - entity_browser
     - field_group
     - link
+    - metatag
     - paragraphs
     - path
     - text
@@ -41,6 +43,7 @@ third_party_settings:
       region: content
     group_misc:
       children:
+        - field_metatag
         - langcode
         - path
         - translation
@@ -127,6 +130,12 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  field_metatag:
+    weight: 18
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
+    region: content
   field_paragraphs:
     weight: 13
     settings:
@@ -170,7 +179,7 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 4
+    weight: 19
     settings:
       include_locked: true
     third_party_settings: {  }
@@ -185,12 +194,12 @@ content:
     region: content
   path:
     type: path
-    weight: 5
+    weight: 20
     settings: {  }
     third_party_settings: {  }
     region: content
   translation:
-    weight: 6
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
