--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_banner
+    - field.field.node.vih_long_cource.field_metatag
     - field.field.node.vih_long_cource.field_paragraphs
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
@@ -22,6 +23,7 @@ dependencies:
   module:
     - entity_reference_revisions
     - image
+    - metatag
     - options
     - panelizer
     - text
@@ -246,6 +248,13 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_metatag:
+    weight: 14
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
     region: content
   field_paragraphs:
     weight: 9
