--- a/config/sync/core.entity_view_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.vih_short_course.body
     - field.field.node.vih_short_course.field_banner
+    - field.field.node.vih_short_course.field_metatag
     - field.field.node.vih_short_course.field_paragraphs
     - field.field.node.vih_short_course.field_vih_course_heading
     - field.field.node.vih_short_course.field_vih_course_subheading
@@ -23,6 +24,7 @@ dependencies:
     - datetime
     - entity_reference_revisions
     - image
+    - metatag
     - options
     - panelizer
     - text
@@ -53,6 +55,13 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_metatag:
+    weight: 15
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
     region: content
   field_paragraphs:
     weight: 6
