--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.taxonomy_term.vih_class_package.field_banner
     - field.field.taxonomy_term.vih_class_package.field_heading
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
+    - field.field.taxonomy_term.vih_class_package.field_metatag
     - field.field.taxonomy_term.vih_class_package.field_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_subheading
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
@@ -16,6 +17,7 @@ dependencies:
     - entity_reference_revisions
     - image
     - link
+    - metatag
     - panelizer
     - text
 third_party_settings:
@@ -64,6 +66,13 @@ content:
       target: '0'
     third_party_settings: {  }
     type: link
+    region: content
+  field_metatag:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
     region: content
   field_paragraphs:
     weight: 5
