--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -67,6 +67,8 @@ module:
   media_entity_twitter: 0
   menu_ui: 0
   metatag: 0
+  metatag_facebook: 0
+  metatag_verification: 0
   node: 0
   options: 0
   page_cache: 0
