--- a/config/sync/field.storage.node.field_metatag.yml
+++ b/config/sync/field.storage.node.field_metatag.yml
@@ -1,14 +1,12 @@
-uuid: a5a017bd-4dfb-4d4e-a398-732e9426242d
+uuid: 5e96ae9e-2451-4c77-b425-57c0a4566d25
 langcode: da
 status: true
 dependencies:
   module:
     - metatag
     - node
-_core:
-  default_config_hash: toqvFhfgG3CpkhzHPz_gW5KwBaCstfihpup6v3aX1AI
-id: node.field_meta_tags
-field_name: field_meta_tags
+id: node.field_metatag
+field_name: field_metatag
 entity_type: node
 type: metatag
 settings: {  }
