--- a/config/sync/node.type.event.yml
+++ b/config/sync/node.type.event.yml
@@ -13,6 +13,6 @@ name: Event
 type: event
 description: ''
 help: ''
-new_revision: true
+new_revision: false
 preview_mode: 0
 display_submitted: false
