--- a/config/sync/field.field.node.vih_long_cource.field_vih_course_image.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_vih_course_image.yml
@@ -18,7 +18,7 @@ id: node.vih_long_cource.field_vih_course_image
 field_name: field_vih_course_image
 entity_type: node
 bundle: vih_long_cource
-label: 'Course Image'
+label: Billede
 description: ''
 required: false
 translatable: true
