--- a/config/sync/field.field.node.vih_short_course.field_vih_sc_image.yml
+++ b/config/sync/field.field.node.vih_short_course.field_vih_sc_image.yml
@@ -18,28 +18,28 @@ id: node.vih_short_course.field_vih_sc_image
 field_name: field_vih_sc_image
 entity_type: node
 bundle: vih_short_course
-label: 'Course Image'
+label: Billede
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
+  file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
+  max_filesize: ''
+  max_resolution: ''
+  min_resolution: ''
   alt_field: true
   alt_field_required: true
   title_field: false
   title_field_required: false
-  max_resolution: ''
-  min_resolution: ''
   default_image:
-    uuid: null
+    uuid: ''
     alt: ''
     title: ''
     width: null
     height: null
-  file_directory: '[date:custom:Y]-[date:custom:m]'
-  max_filesize: ''
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
