--- a/config/sync/views.view.long_courses.yml
+++ b/config/sync/views.view.long_courses.yml
@@ -679,6 +679,7 @@ display:
         arguments: false
         filters: false
         filter_groups: false
+        relationships: false
       display_description: ''
       arguments: {  }
       filters:
@@ -733,10 +734,60 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_vih_cp_start_date_value:
+          id: field_vih_cp_start_date_value
+          table: node__field_vih_cp_start_date
+          field: field_vih_cp_start_date_value
+          relationship: field_vih_course_periods
+          group_type: group
+          admin_label: ''
+          operator: '>'
+          value:
+            min: ''
+            max: ''
+            value: tomorrow
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
       filter_groups:
         operator: AND
         groups:
           1: AND
+      relationships:
+        field_vih_course_periods:
+          id: field_vih_course_periods
+          table: node__field_vih_course_periods
+          field: field_vih_course_periods
+          relationship: none
+          group_type: group
+          admin_label: 'field_vih_course_periods: Content'
+          required: true
+          plugin_id: standard
     cache_metadata:
       max-age: -1
       contexts:
