--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -1,8 +1,9 @@
-uuid: a079be8d-977c-41e1-8970-168f69dfc4da
+uuid: 0ef696ce-a62b-42cd-af7f-1873be56ed22
 langcode: da
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.user.teaser
     - field.field.user.user.field_banner
     - field.field.user.user.field_e_mail
     - field.field.user.user.field_job_title
@@ -18,11 +19,8 @@ dependencies:
     - field.field.user.user.field_vih_user_title
     - image.style.vih_person_teaser
   module:
-    - datetime
-    - entity_reference_revisions
     - image
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -30,56 +28,21 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: user.user.default
+id: user.user.teaser
 targetEntityType: user
 bundle: user
-mode: default
+mode: teaser
 content:
-  field_banner:
-    weight: 10
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_e_mail:
-    type: email_mailto
-    weight: 6
+    type: basic_string
+    weight: 4
     region: content
-    label: above
+    label: inline
     settings: {  }
     third_party_settings: {  }
   field_job_title:
-    weight: 11
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_paragraphs:
-    type: entity_reference_revisions_entity_view
-    weight: 9
+    weight: 1
     label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
-  field_user_birthday:
-    type: datetime_default
-    weight: 7
-    region: content
-    label: above
-    settings:
-      timezone_override: ''
-      format_type: vih_medium_date_short_month
-    third_party_settings: {  }
-  field_user_kvalifikationer:
-    weight: 5
-    label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -87,7 +50,7 @@ content:
     region: content
   field_user_name_first:
     weight: 2
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -95,52 +58,36 @@ content:
     region: content
   field_user_name_last:
     weight: 3
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_user_type_id:
-    weight: 12
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_vih_user_descr:
-    weight: 4
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   field_vih_user_phone:
     type: string
-    weight: 8
+    weight: 5
     region: content
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
   field_vih_user_photo:
     type: image
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
       image_style: vih_person_teaser
       image_link: ''
     third_party_settings: {  }
-  field_vih_user_title:
-    type: string
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
+  field_banner: true
+  field_paragraphs: true
+  field_user_birthday: true
+  field_user_kvalifikationer: true
+  field_user_type_id: true
+  field_vih_user_descr: true
+  field_vih_user_title: true
   langcode: true
   member_for: true
