--- a/config/sync/field.field.node.page.field_paragraphs.yml
+++ b/config/sync/field.field.node.page.field_paragraphs.yml
@@ -20,6 +20,7 @@ dependencies:
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
     - paragraphs.paragraphs_type.vih_single_class_group
+    - paragraphs.paragraphs_type.vih_teacher_class_description
     - paragraphs.paragraphs_type.vih_webform
   module:
     - entity_reference_revisions
@@ -38,6 +39,7 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
+      vih_teacher_class_description: vih_teacher_class_description
       1_column_action_centered: 1_column_action_centered
       list_of_news_teasers: list_of_news_teasers
       video: video
@@ -56,8 +58,8 @@ settings:
       vih_webform: vih_webform
     target_bundles_drag_drop:
       vih_teacher_class_description:
+        enabled: true
         weight: -27
-        enabled: false
       1_column_action_centered:
         enabled: true
         weight: 2
